# A.M

./: .gitignore  README.md  SPECTF2.pkl  check_classifier.py  main_q2.py  pyproject.toml  requirements.txt
Atividade_leandro/: atividade_L.ipynb  atv.py
notebooks/: baysean_gaussian_classifier.ipynb  classifier_experiments.ipynb  preprocessing.ipynb  vkcm_experiments.ipynb
projeto_francisco/: preprocessing.ipynb
src/: classifiers.py  evaluation.py  gaussian_bayesian_classifier.py  vkcm.py
