[project]
name = "a-m"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imblearn (>=0.0,<0.1)",
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "a"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
